// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Browsersync Add support 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": []
}
"
`;

exports[`Browsersync Add support 2`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"predeploy\\": \\"npm-run-all clean build:es build:css\\",
        \\"deploy\\": \\"echo \\\\\\"Not yet implemented - now.sh or surge.sh are supported out of the box\\\\\\" && exit 1\\",
        \\"clean\\": \\"del-cli ./output\\",
        \\"copy\\": \\"npm-run-all --parallel copy:assets copy:index\\",
        \\"copy:assets\\": \\"cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./output --parents --recursive\\",
        \\"copy:index\\": \\"cpy './assets/index.html' ./output\\",
        \\"prebuild:es\\": \\"del-cli output/assets\\",
        \\"build:es\\": \\"webpack\\",
        \\"postbuild:es\\": \\"npm run copy\\",
        \\"watch:assets\\": \\"watch 'npm run copy' ./assets\\",
        \\"watch:es\\": \\"watch 'npm run build:es' ./source\\",
        \\"dashboard\\": \\"webpack-dashboard -- webpack-dev-server --config ./webpack.config.js\\",
        \\"build:css\\": \\"postcss ./assets/css/style.css --dir ./output\\",
        \\"watch:css\\": \\"npm run build:css -- --watch\\",
        \\"prestart\\": \\"npm run build:es\\",
        \\"start\\": \\"npm-run-all --parallel watch:es watch:css serve\\",
        \\"serve\\": \\"browser-sync start --server ./output --files ./output --port 4669\\"
    }
}
"
`;

exports[`Browsersync Remove support 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"predeploy\\": \\"npm-run-all clean build:es build:css\\",
        \\"deploy\\": \\"echo \\\\\\"Not yet implemented - now.sh or surge.sh are supported out of the box\\\\\\" && exit 1\\",
        \\"clean\\": \\"del-cli ./output\\",
        \\"copy\\": \\"npm-run-all --parallel copy:assets copy:index\\",
        \\"copy:assets\\": \\"cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./output --parents --recursive\\",
        \\"copy:index\\": \\"cpy './assets/index.html' ./output\\",
        \\"prebuild:es\\": \\"del-cli output/assets\\",
        \\"build:es\\": \\"webpack\\",
        \\"postbuild:es\\": \\"npm run copy\\",
        \\"watch:assets\\": \\"watch 'npm run copy' ./assets\\",
        \\"watch:es\\": \\"watch 'npm run build:es' ./source\\",
        \\"dashboard\\": \\"webpack-dashboard -- webpack-dev-server --config ./webpack.config.js\\",
        \\"build:css\\": \\"postcss ./assets/css/style.css --dir ./output\\",
        \\"watch:css\\": \\"npm run build:css -- --watch\\"
    }
}
"
`;
